ambassador/tests/008-regex-prefix/gold.intermediate.json
{
    "envoy_config": {
        "admin": [
            {
                "_source": "--internal--",
                "admin_port": 8001
            }
        ],
        "clusters": [
            {
                "_referenced_by": [
                    "--internal--"
                ],
                "_service": "127.0.0.1:8877",
                "_source": "--internal--",
                "lb_type": "round_robin",
                "name": "cluster_127_0_0_1_8877",
                "type": "strict_dns",
                "urls": [
                    "tcp://127.0.0.1:8877"
                ]
            },
            {
                "_referenced_by": [
                    "mapping-regex.yaml.1",
                    "mapping-regex.yaml.2"
                ],
                "_service": "httpbin.org",
                "_source": "mapping-regex.yaml.1",
                "host_rewrite": "httpbin.org",
                "lb_type": "round_robin",
                "name": "cluster_http___httpbin_org",
                "type": "strict_dns",
                "urls": [
                    "tcp://httpbin.org:80"
                ]
            }
        ],
        "filters": [
            {
                "_source": "--internal--",
                "config": {},
                "name": "cors"
            },
            {
                "_source": "--internal--",
                "config": {},
                "name": "router",
                "type": "decoder"
            }
        ],
        "listeners": [
            {
                "_source": "--internal--",
                "require_tls": false,
                "service_port": 80,
                "redirect_listener": false,
                "use_proxy_proto": false,
                "use_remote_address": true
            }
        ],
        "routes": [
            {
                "__saved": [
                    0,
                    26,
                    0,
                    "/ambassador/v0/check_ready",
                    "GET"
                ],
                "_group_id": "0a42187b7b3d283e0079ddab01825e1c71fad9f6",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "--internal--"
                ],
                "_source": "--internal--",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/v0/check_ready",
                "prefix_rewrite": "/ambassador/v0/check_ready",

                "timeout_ms": 10000
            },
            {
                "__saved": [
                    0,
                    15,
                    26,
                    "^\\/http(bin)\\/$",
                    "GET",
                    ":authority-test.datawire.io"
                ],
                "_group_id": "0e7ced56a4604bdde2e44a278fceca27be993d03",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "mapping-regex.yaml.1"
                ],
                "_source": "mapping-regex.yaml.1",
                "clusters": [
                    {
                        "name": "cluster_http___httpbin_org",
                        "weight": 100.0
                    }
                ],
                "headers": [
                    {
                        "name": ":authority",
                        "regex": false,
                        "value": "test.datawire.io"
                    }
                ],
                "host_rewrite": "httpbin.org",
                "prefix_rewrite": "/",
                "regex": "^\\/http(bin)\\/$"
            },
            {
                "__saved": [
                    0,
                    25,
                    26,
                    "^\\/users\\/(\\S)+\\/profile$",
                    "GET",
                    ":authority-test.datawire.io"
                ],
                "_group_id": "46d4c65de8385b0037059a5230371c822f43b189",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "mapping-regex.yaml.2"
                ],
                "_source": "mapping-regex.yaml.2",
                "clusters": [
                    {
                        "name": "cluster_http___httpbin_org",
                        "weight": 100.0
                    }
                ],
                "headers": [
                    {
                        "name": ":authority",
                        "regex": false,
                        "value": "test.datawire.io"
                    }
                ],
                "host_rewrite": "httpbin.org",
                "prefix_rewrite": "/",
                "regex": "^\\/users\\/(\\S)+\\/profile$"
            },
            {
                "__saved": [
                    0,
                    26,
                    0,
                    "/ambassador/v0/check_alive",
                    "GET"
                ],
                "_group_id": "6151893fbc2f1f730a1bb946b2eefac391f0d2ec",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "--internal--"
                ],
                "_source": "--internal--",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/v0/check_alive",
                "prefix_rewrite": "/ambassador/v0/check_alive",

                "timeout_ms": 10000
            },
            {
                "__saved": [
                    0,
                    15,
                    0,
                    "/ambassador/v0/",
                    "GET"
                ],
                "_group_id": "b69eeb747b38f5e5fd3955d044ea7797d67d024f",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "--internal--"
                ],
                "_source": "--internal--",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/v0/",
                "prefix_rewrite": "/ambassador/v0/",
            "timeout_ms": 10000
            }        ]
    },
    "errors": {},
    "source_map": {
        "--internal--": {
            "--internal--": true
        },
        "mapping-regex.yaml": {
            "mapping-regex.yaml.1": true,
            "mapping-regex.yaml.2": true
        }
    },
    "sources": {
        "--diagnostics--": {
            "_source": "--diagnostics--",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "filename": "--diagnostics--",
            "index": 0,
            "kind": "diagnostics",
            "name": "Ambassador Diagnostics",
            "version": "v0"
        },
        "--internal--": {
            "_source": "--internal--",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "filename": "--internal--",
            "index": 0,
            "kind": "Internal",
            "name": "Ambassador Internals",
            "version": "v0"
        },
        "mapping-regex.yaml.1": {
            "_source": "mapping-regex.yaml",
            "filename": "mapping-regex.yaml",
            "index": 1,
            "kind": "Mapping",
            "name": "regex_mapping",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nhost: test.datawire.io\nhost_rewrite: httpbin.org\nkind: Mapping\nname: regex_mapping\nprefix: ^\\/http(bin)\\/$\nprefix_regex: true\nservice: http://httpbin.org\n"
        },
        "mapping-regex.yaml.2": {
            "_source": "mapping-regex.yaml",
            "filename": "mapping-regex.yaml",
            "index": 2,
            "kind": "Mapping",
            "name": "regex_escaping_mapping",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nhost: test.datawire.io\nhost_rewrite: httpbin.org\nkind: Mapping\nname: regex_escaping_mapping\nprefix: ^\\/users\\/(\\S)+\\/profile$\nprefix_regex: true\nservice: http://httpbin.org\n"
        }
    }
}
